# pose-estimation

./: .gitignore  CMakeLists.txt  README.md  camera_params.yaml  pose-estimation.cpp
apps/: CMakeLists.txt  PoseEstimation.cpp
apps/libs/include/: geometry.hpp  utils.hpp
apps/libs/private/include/: geometry.hpp  utils.hpp
apps/libs/private/src/: geometry.cpp  utils.cpp
apps/libs/src/: geometry.cpp  utils.cpp
config/: config.yml
